assets/css/main.styl
@import "variables"

body
   margin: 10px
   font-family: primary-font

h1
   color: #02779e
   max-width: 1200px
   font-size: 28px
   border-bottom: 1px solid #ccc
   margin: 12px auto

.clear
   clear: both
   min-height: 1px

.button
   display: block
   padding: 5px 15px
   margin-top: 10px
   text-align: center
   border: 1px solid #888
   border-radius: 5px
   font-size: 20px
   background: highlight-blue
   color: #fff
   box-shadow: inset 0 1px 2px rgba(255,255,255,0.8), inset 0 -1px 2px rgba(0,0,0,0.6)
   text-decoration: none
   cursor: pointer
   &.gray
      background: #aaa
   &:hover
      box-shadow: inset 0 1px 2px rgba(0,0,0,0.6), inset 0 -1px 2px rgba(0,0,0,0.6)

.toggleButton
   float: right
   color: highlight-blue
   cursor: pointer

input[type=checkbox]
   display: inline-block
   margin-right: 5px

.content
   max-width: 1200px
   position: relative
   margin: 10px auto

   .sidebar
      float: right
      width: 192px

      h1
         margin: 8px 0 8px 0
         border-bottom: 1px solid #ccc
         color: #333

      h1:first-child
         margin-top: 0

      .sets
         font-size: 20px
         
         input[type=checkbox]
            position: relative
            top: -2px
   
   .filters
      padding: 10px
      border-radius: 10px
      border: 1px solid #ccc
      margin-top: 2px

   .meta
      margin-top: 10px
      padding: 10px
      border-radius: 10px
      border: 1px solid #ccc

      h1
         font-size: 20px

      .recommendation
         font-size: 14px
         span
            font-weight: bold


   .main
      margin-right: 200px

      .loading 
         text-align: center
         font-size: 50px
         padding-top: 40px

#cards
   .highlight
      display:none
      position: absolute
      top: 2px
      right: 2px
      bottom: 2px
      left: 2px
      border: 2px solid highlight-blue
      background: rgba(2,119,158,0.65)
   
   .card-wrap
      width: 20%
      -webkit-perspective: 1000
      -moz-perspective: 1000
      perspective: 1000
      float: left
      &.selected .highlight
         cursor:pointer
         display:block

      
.card-front
   position: relative
   cursor: pointer

   .set-name-wrap
      position: absolute
      font-size: 18px
      margin-top: -13px
      top: 50%
      width: 100%
      height: 30px
      text-align: center

      .set-name
         padding: 6px 8px
         margin: 0 auto
         display: inline-block
         color: #fff
         background: rgba(30,30,30,0.7)
         text-shadow: 1px 1px 4px #000

         &.baseset
            color: base-set-color
         &.intrigue
            color: intrigue-color
         &.seaside
            color: seaside-color
         &.alchemy
            color: alchemy-color
         &.prosperity
            color: prosperity-color
         &.cornucopia
            color: cornucopia-color
         &.hinderlands
            color: hinderlands-color
         &.darkages
            color: darkages-color
         &.guilds
            color: guilds-color

   &.keep .highlight
      opacity: 0

   &.treasure .name
      color: treasure-color

   &.victory .name
      color: victory-color

   img
      width: 100%
      display: block

#cards
   // Styles for flip
   .flipper 
      margin: 2px
      -webkit-transition: 0.6s
      -webkit-transform-style: preserve-3d
      -moz-transition: 0.6s
      -moz-transform-style: preserve-3d
      transition: 0.6s
      transform-style: preserve-3d
      position: relative
      &.show-front
         -webkit-transform: rotateY(-180deg)
         -moz-transform: rotateY(-180deg)
         transform: rotateY(-180deg)
      
         .highlight
            cursor: pointer

   .card-front
   .card-back
      -webkit-backface-visibility: hidden
      -moz-backface-visibility: hidden
      backface-visibility: hidden
      position: absolute
      top: 0
      right: 0
      bottom: 0
      left: 0
   .card-back
      z-index: 2
      img
         width: 100%
         display: block
   .card-front
      -webkit-transform: rotateY(-180deg)
      -moz-transform: rotateY(-180deg)
      transform: rotateY(-180deg)

.footer
   padding: 10px
   border-top: 1px #ddd solid
   margin: 10px -10px -10px -10px
   font-size: 12px
   text-align: center

.dialog-hidden-content
   display:none

.dialog-content
   font-family: primary-font
   font-size: 23px

   .dialog-desc
      font-size: 16px
      line-height: 16px
   h1
      margin: 8px 0 8px 0
      color: #333
      border-bottom: 1px solid #ccc
      font-size: 24px
      cursor: pointer

   .checkbox-wrap.columns
      width: 50%
      &.three
         width: 33.33333333%
      &.four
         width: 25%
      &:nth-child(even)
         float: right
         &:last-child
            float: left
      &:nth-child(odd)
         float: left
      input[type=checkbox]
         position: relative
         top: -2px

   .dialog-buttons
      margin-top: 12px
      .button
         float: right
         margin-left: 6px


@media (max-width: 1070px)
   #cards .card-wrap
      width: 25%

@media (max-width: 905px)
   #cards
      .card-wrap
         width: 33.3333%

// Move sidebar to the top
@media (max-width: 600px)
   body 
      margin: 5px

   label.checkbox
      position: relative
      left: 5px
      font-size: 23px
      line-height: 27px

      input[type=checkbox]
         position: relative
         margin-right: 12px!important
         -webkit-transform: scale(1.5,1.5)
         top: -2px
   
   .content
      .sidebar
         float: none
         width: auto
         margin-top: 10px

      .sets
         .set
            width: 50%
            &:nth-child(odd)
               float: left
            &:nth-child(even)
               float: left
    
      .meta
         h1
            font-size: 26px
         .recommendation
            font-size: 18px


      .main
         margin: 5px 0 0 0 

   .set-name-wrap 
      font-size: 16px

@media (max-width: 400px)
   label.checkbox
      position: relative
      left: 5px
      font-size: 20px
      line-height: 25px

      input[type=checkbox]
         position: relative
         margin-right: 12px!important
         -webkit-transform: scale(1.5,1.5)
         top: -2px

   .set-name.hinterlands
      font-size: 15px

// Correction for vex
.vex.vex-theme-os
   padding-top: 80px

@media (max-height: 650px)
   .vex.vex-theme-os
      padding-top: 40px

@media (max-height: 635px)
   .vex.vex-theme-os
      padding-top: 15px

@media (max-height: 600px)
   .vex.vex-theme-os
      padding-top: 0px

